# rust-program

./: Cargo.toml  rustfmt.toml
.cargo/: config.toml
catch-apple-game/: Cargo.toml
catch-apple-game/src/: app.rs  apple.rs  cursor_state.rs  enemy.rs  game_data.rs  input_state.rs  player.rs  sound.rs  world.rs
catch-apple-game/src/gui/: font8x8.rs
crates/engine_app/: Cargo.toml
crates/engine_app/src/: app.rs  lib.rs  plugin.rs  plugin_group.rs
crates/engine_ecs/: Cargo.toml
crates/engine_ecs/macros/: Cargo.toml
crates/engine_ecs/src/: entity.rs  entity_manager.rs  event.rs  lib.rs  resource.rs  world.rs
crates/engine_internal/: Cargo.toml
crates/engine_internal/src/: default_plugins.rs  lib.rs
crates/engine_macro_utils/: Cargo.toml
crates/engine_macro_utils/src/: engine_manifest.rs  lib.rs
crates/engine_math/: Cargo.toml
crates/engine_math/src/: lib.rs
crates/engine_platform/: Cargo.toml
crates/engine_window/: Cargo.toml
crates/engine_winit/: Cargo.toml
crates/engine_winit/src/: lib.rs  macos.rs  system.rs  winit_windows.rs
my-ecs-framework/: Cargo.toml
my-ecs-framework/src/: archetype.rs  entities.rs  lib.rs  world.rs
my-ecs-rust/: Cargo.toml
my-ecs-rust/src/: lib.rs  resource.rs
my-macro/: Cargo.toml
my-macro/src/: lib.rs
protect-home-game/: Cargo.toml
protect-home-game-old/: Cargo.toml
protect-home-game-old/src/: cursor_state.rs  rectangle.rs  uitils.rs  world.rs
protect-home-game/src/: app.rs  bullet.rs  collision_box.rs  enemy.rs  entity.rs  game_state.rs  gui.rs  input.rs  input_state.rs  main.rs  player.rs  render.rs  spatial_grid.rs  transform.rs  utils.rs  world.rs
src/: animation.rs  app.rs  apple.rs  bullet.rs  enemy.rs  game_data.rs  gui.rs  input_state.rs  main.rs  player.rs  rectangle.rs  sound.rs  uitils.rs  world.rs
src/gui/: button.rs  gui_manager.rs  label.rs
test-game/: Cargo.toml
test-game/src/: animation.rs  bullet.rs  collision_box.rs  entity.rs  input.rs  main.rs  player.rs  render.rs  sound.rs  transform.rs
tests/: test_app.rs
(+11 files in other folders)
