[package]
name = "rust-program"
version = "0.0.1"
edition = "2024"

[workspace]
members = ["crates/*", "protect-home-game", "my-ecs-rust", "my-macro"]

[dependencies]
my-macro = { path = "my-macro" }
engine_internal = { path = "crates/engine_internal" }

[features]
default = ["engine_winit", "x11"]

engine_winit = ["engine_internal/engine_winit"]

x11 = ["engine_internal/x11"]
