[package]
name = "engine_internal"
version = "0.0.1"
edition = "2024"

[dependencies]
engine_winit = { path = "../engine_winit" }
engine_window = { path = "../engine_window" }
engine_ecs = { path = "../engine_ecs" }
engine_platform = { path = "../engine_platform" }
engine_math = { path = "../engine_math" }
engine_app = { path = "../engine_app" }
