[package]
name = "engine_winit"
version = "0.0.1"
edition = "2024"

[dependencies]
winit = { version = "0.30.12" }
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5.2"
objc2-foundation = "0.2.2"
objc2-app-kit = "0.2.2"

engine_ecs = { path = "../engine_ecs" }
engine_window = { path = "../engine_window" }
engine_app = { path = "../engine_app" }

[features]
default = ["x11"]

x11 = ["winit/x11"]
